# Penefiles

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt
backend/include/: AppComponent.hpp  filesystem.hpp
backend/include/controllers/: PenefilesController.hpp
backend/include/db/: PenefilesDb.hpp
backend/include/dto/: DTOs.hpp
backend/include/services/: PenefilesService.hpp
backend/sql/: CMakeLists.txt  penefiles.sqlite3
backend/src/: CMakeLists.txt  main.cpp
backend/src/controllers/: PenefilesController.cpp
backend/src/db/: PenefilesDb.cpp
backend/src/services/: PenefilesService.cpp
frontend/: index.html  notes.html  serviceWorker.js
frontend/css/: notes.css  styles.css
frontend/js/: codemirror.js  config.js  editor.bundle.js  main.js  notes.js  penefiles.js  tex-mml-chtml.js
